--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ p {
 }
 
 .rocket-image {
-  background-image: url("../img/moon-rocket.png");
+  background-image: url("img/moon-rocket.png");
   background-repeat: no-repeat; 
   width: 438px;f
   height: 438px;
