--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ p {
 .rocket-image {
   background-image: url("img/moon-rocket.png");
   background-repeat: no-repeat; 
-  width: 438px;f
+  width: 438px;
   height: 438px;
   
 }
